--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 
 <head>
     <meta charset="utf-8">
+    <meta name="robots" content="index, follow">
     <meta name="keywords" content="seo, google, site web, site internet, agence design lyon, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
     <meta name="description" content="Site officiel de la Chouette agence web design à lyon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.min.css">
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
