--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <!-- bloc-0 END -->
 
         <!-- bloc-1-presentation -->
-        <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero" alt="Bannière du site de La Chouette agence à lyon">
+        <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
             <div class="container bloc-lg">
                 <div class="row tight-width-whitespace">
                     <div class="col-sm-12">
@@ -93,7 +93,7 @@
                 <div class="row voffset-lg med-width-whitespace">
                     <div class="col-sm-4">
                         <div class="text-center">
-                            <span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" alt="Logo de web design"></span>
+                            <span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
                         </div>
                         <h3 class="mg-md text-center">
                             Web design
@@ -104,7 +104,7 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="text-center">
-                            <span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" alt="Logo de stratégie"></span>
+                            <span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
                         </div>
                         <h3 class="mg-md text-center">
                             &nbsp;Stratégie
@@ -115,7 +115,7 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="text-center">
-                            <span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" alt="Logo d'illustrations"></span>
+                            <span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
                         </div>
                         <h3 class="mg-md text-center">
                             Illustrations
@@ -207,7 +207,7 @@
         <!-- bloc-4-portfolio END -->
 
         <!-- bloc-5-cta -->
-        <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta" alt="Bannière du site de La Chouette agence à lyon">
+        <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
             <div class="container bloc-lg">
                 <div class="row">
                     <h2 class="mg-md text-center tc-white">
@@ -232,22 +232,22 @@
                         <div class="row row-no-gutters social">
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html"><span class="fa fa-twitter icon-md" alt="Logo de twitter"></span></a>
+                                    <a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html"><span class="fa fa-facebook icon-md" alt="Logo de facebook"></span></a>
+                                    <a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html"><span class="fa fa-dribbble icon-md" alt="Logo de dribbble"></span></a>
+                                    <a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html"><span class="fa fa-instagram icon-md" alt="Logo de instagram"></span></a>
+                                    <a class="social" href="index.html"><span class="fa fa-instagram icon-md" ></span></a>
                                 </div>
                             </div>
                             <div class="keywords" style="color:#F3976C;">Agence web à lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
