Amélioration des images sur le format responsive smartphone

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="container bloc-md">
                 <div class="row">
                     <div class="col-sm-12 text-center">
-                        <img alt="agence web, agence web lyon, web design lyon, stratégie web" src="img/title.png" />
+                        <img id="img_title" alt="agence web, agence web lyon, web design lyon, stratégie web" src="img/title.png" />
                     </div>
                 </div>
                 <div class="row voffset-lg med-width-whitespace">
@@ -127,7 +127,7 @@
                 </div>
                 <div class="row voffset-lg voffset">
                     <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-                        <img alt="agence web, agence web lyon, web design lyon, stratégie web" src="img/citation.png" />
+                        <img id="img_citation" alt="agence web, agence web lyon, web design lyon, stratégie web" src="img/citation.png" />
 
                     </div>
                 </div>
@@ -159,7 +159,7 @@
             <div class="container bloc-lg">
                 <div class="row">
                     <div class="col-sm-12 text-center">
-                        <img alt="agence web, agence web lyon, web design lyon, stratégie web" src="img/title2.png" />
+                        <img id="img_title2" alt="agence web, agence web lyon, web design lyon, stratégie web" src="img/title2.png" />
                     </div>
                 </div>
                 <div class="row tight-width-whitespace portfolio-row">
