--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
 
                 <nav class="navbar row">
                     <div class="navbar-header">
-                        <div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
                         <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="lyon web design logo agence web meilleure agence" height="40" /></a>
-                        <div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
                         <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -55,7 +53,7 @@
                             <li>
                             </li>
                             <li>
-                                <a href="page2.html">page2</a>
+                                <a href="contact.html">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -73,6 +71,9 @@
                         <h1 class="text-center hero-bloc-text tc-white ">
                             La chouette agence.
                         </h1>
+                        <h2 id="agence_description">
+                            Agence web à lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site
+                        </h2>
                         <div class="text-center">
                             <a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
                         </div>
@@ -140,9 +141,9 @@
             <div class="container bloc-lg">
                 <div class="row tight-width-whitespace black-background">
                     <div class="col-sm-12">
-                        <h2 class="mg-md text-center tc-white">
+                        <h3 class="mg-md text-center tc-white">
                             Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
-                        </h2>
+                        </h3>
                         <p class="text-center white">
                             Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre
                             site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link"
@@ -210,9 +211,9 @@
         <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
             <div class="container bloc-lg">
                 <div class="row">
-                    <h2 class="mg-md text-center tc-white">
+                    <h3 class="mg-md text-center tc-white">
                         Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
-                    </h2>
+                    </h3>
                     <div class="col-sm-12 text-center">
                         <a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
                     </div>
@@ -250,7 +251,6 @@
                                     <a class="social" href="index.html"><span class="fa fa-instagram icon-md" ></span></a>
                                 </div>
                             </div>
-                            <div class="keywords" style="color:#F3976C;">Agence web à lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
                         </div>
                         <div class="row">
                             <div class="col-sm-4">
