--- a/index.html
+++ b/index.html
@@ -71,11 +71,8 @@
                         <h1 class="text-center hero-bloc-text tc-white ">
                             La chouette agence.
                         </h1>
-                        <h2 id="agence_description">
-                            Agence web à lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site
-                        </h2>
                         <div class="text-center">
-                            <a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+                            <a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
                         </div>
                     </div>
                 </div>
@@ -141,13 +138,13 @@
             <div class="container bloc-lg">
                 <div class="row tight-width-whitespace black-background">
                     <div class="col-sm-12">
-                        <h3 class="mg-md text-center tc-white">
+                        <h2 class="mg-md text-center tc-white">
                             Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
-                        </h3>
+                        </h2>
                         <p class="text-center white">
                             Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre
                             site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link"
-                                href="page2.html">Contactez notre équipe</a><br>
+                                href="contact.html">Contactez notre équipe</a><br>
                         </p>
                     </div>
                 </div>
@@ -160,6 +157,7 @@
             <div class="container bloc-lg">
                 <div class="row">
                     <div class="col-sm-12 text-center">
+                        <h2 class="keywords">Agence web à lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</h2>
                         <img id="img_title2" alt="agence web, agence web lyon, web design lyon, stratégie web" src="img/title2.png" />
                     </div>
                 </div>
@@ -211,11 +209,11 @@
         <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
             <div class="container bloc-lg">
                 <div class="row">
-                    <h3 class="mg-md text-center tc-white">
+                    <h2 class="mg-md text-center tc-white">
                         Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
-                    </h3>
+                    </h2>
                     <div class="col-sm-12 text-center">
-                        <a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+                        <a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
                     </div>
                 </div>
             </div>
