--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                 <nav class="navbar row">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="lyon web design logo agence web meilleure agence" height="40" /></a>
+                        <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo de la barre de navigation de l'agence web: La chouette agence" height="40" /></a>
                         <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -67,7 +67,7 @@
             <div class="container bloc-lg">
                 <div class="row tight-width-whitespace">
                     <div class="col-sm-12">
-                        <img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web lyon, création logo lyon" />
+                        <img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo de la chouette agence basée sur lyon" />
                         <h1 class="text-center hero-bloc-text tc-white ">
                             La chouette agence.
                         </h1>
@@ -85,7 +85,9 @@
             <div class="container bloc-md">
                 <div class="row">
                     <div class="col-sm-12 text-center">
-                        <img id="img_title" alt="agence web, agence web lyon, web design lyon, stratégie web" src="img/title.png" />
+                        <img id="img_title" alt="Description de la chouette agence:
+                         la chouette agence est une agence de web design qui aide les entreprises à devenir attractivess et visibles sur internet"
+                        src="img/title.png" />
                     </div>
                 </div>
                 <div class="row voffset-lg med-width-whitespace">
@@ -125,7 +127,11 @@
                 </div>
                 <div class="row voffset-lg voffset">
                     <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-                        <img id="img_citation" alt="agence web, agence web lyon, web design lyon, stratégie web" src="img/citation.png" />
+                        <img id="img_citation" alt="Avis de Maxime Guibard:
+                            la chouette agence est une excellente agence web!
+                            Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.
+                            Cela nous a aidé à doubler nos ventes en ligne à Lyon. "
+                        src="img/citation.png" />
 
                     </div>
                 </div>
@@ -158,12 +164,12 @@
                 <div class="row">
                     <div class="col-sm-12 text-center">
                         <h2 class="keywords">Agence web à lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</h2>
-                        <img id="img_title2" alt="agence web, agence web lyon, web design lyon, stratégie web" src="img/title2.png" />
+                        <img id="img_title2" alt="Nous travaillons avec beaucoup de clients, voici nos réalisations" src="img/title2.png" />
                     </div>
                 </div>
                 <div class="row tight-width-whitespace portfolio-row">
                     <div class="col-sm-6">
-                        <a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="lyon web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+                        <a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Image de projet: refonte d'un site web pour un journal local" class="img-responsive portfolio-thumb" /></a>
                         <h3 class="mg-md text-center">
                             Refonte d'un site web pour un journal local
                         </h3>
@@ -172,7 +178,7 @@
                         </p>
                     </div>
                     <div class="col-sm-6">
-                        <a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="lyon web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+                        <a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Image de projet: création d'un site web pour photographes" /></a>
                         <h3 class="mg-md text-center">
                             Création d'un site web pour photographes
                         </h3>
@@ -183,7 +189,7 @@
                 </div>
                 <div class="row tight-width-whitespace portfolio-row">
                     <div class="col-sm-6">
-                        <a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="lyon web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
+                        <a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="Image de projet: création d'un site web pour voyageur" /></a>
                         <h3 class="mg-md text-center">
                             Création d'un site internet pour un voyageur
                         </h3>
@@ -192,7 +198,7 @@
                         </p>
                     </div>
                     <div class="col-sm-6">
-                        <a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="lyon web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+                        <a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="Image de projet: création d'un site web pour agence de mariage" /></a>
                         <h3 class="mg-md text-center">
                             Conception d'un site pour une agence de mariage
                         </h3>
