--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="robots" content="index, follow">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design lyon, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
+    <meta name="keywords" content="site web, web design, stratégie web, référencement naturel, agence design lyon, agence design, la chouette agence">
     <meta name="description" content="Site officiel de la Chouette agence web design à lyon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -45,8 +45,8 @@
                 <div class="container bloc-sm">
                     <nav class="navbar row">
                         <div class="navbar-header">
-                            <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo de La Chouette agence de lyon web design" height="40" /></a>
-                            <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+                            <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo de la barre de navigation de l'agence web: La chouette agence" height="40" /></a>
+                            <button id="nav-toggle" aria-label="Afficher le menu de navigation" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
                         <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
                     </button>
                         </div>
@@ -54,8 +54,6 @@
                             <ul class="site-navigation nav navbar-nav">
                                 <li>
                                     <a href="index.html">Accueil</a>
-                                </li>
-                                <li>
                                 </li>
                                 <li>
                                     <a href="contact.html">Contact</a>
@@ -71,12 +69,14 @@
                 <div class="container bloc-lg">
                     <div class="row">
                         <div class="col-sm-12">
-                            <h1 class="text-center hero-bloc-text tc-white">
-                                Parlons web design !
+                            <h1 class="text-center hero-bloc-text contact_h1 ">
+                                La chouette agence, parlons web design!
                             </h1>
-                            <p class=" main_p text-center mg-lg tc-white tight-width-whitespace">
-                                Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br> Parlez-nous de votre projet en complétant le formulaire ci-dessous.
-                            </p>
+                            <br/>
+                            <h2 class=" main_p text-center mg-lg  tight-width-whitespace">
+                                Stratégie web, référencement naturel, conception de site web, web design...<br/><br/>
+                                Faites nous part de votre projet dans le formulaire ci-dessous!
+                            </h2>
                         </div>
                     </div>
                 </div>
@@ -112,7 +112,7 @@
                                     </label>
                                     <textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
                                 </div>
-                                <button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+                                <button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit" aria-label="Envoyer">
                                     Envoyer
                                 </button>
                             </form>
@@ -128,7 +128,7 @@
         </aside>
 
         <!-- ScrollToTop Button -->
-        <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+        <a class="bloc-button btn btn-d scrollToTop" aria-label="Aller en haut de la page" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
         <!-- ScrollToTop Button END-->
 
         <footer>
@@ -136,28 +136,28 @@
                 <div class="container bloc-sm">
                     <div class="row">
                         <div class="col-sm-12">
-                            <p class="text-center white">
+                            <h4 class="text-center white">
                                 La chouette agence - Agence web basée à Lyon.<br>
-                            </p>
+                            </h4>
                             <div class="row row-no-gutters social">
                                 <div class="col-sm-3">
                                     <div class="text-center">
-                                        <a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+                                        <a class="social" aria-label="Icône Twitter" href=""><span class="fa fa-twitter icon-md"></span></a>
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="text-center">
-                                        <a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+                                        <a class="social" aria-label="Icône Facebook" href=""><span class="fa fa-facebook icon-md"></span></a>
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="text-center">
-                                        <a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+                                        <a class="social" aria-label="Icône Dribbble" href=""><span class="fa fa-dribbble icon-md"></span></a>
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="text-center">
-                                        <a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+                                        <a class="social" aria-label="Icône Instagram" href=""><span class="fa fa-instagram icon-md"></span></a>
                                     </div>
                                 </div>
                             </div>
