--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="robots" content="index, follow">
-    <meta name="keywords" content="site web, site internet, stratégie web, internet, agence web design, lyon, illustrations, la chouette agence">
+    <meta name="keywords" content="site web, référencement, site internet, stratégie web, internet, agence web design, lyon, illustrations, la chouette agence">
     <meta name="description" content="Site officiel de la Chouette agence web design à lyon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -91,7 +91,7 @@
                     <div class="row voffset-lg med-width-whitespace">
                         <div class="col-sm-4">
                             <div class="text-center">
-                                <span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" aria-label="Icône web design"></span>
+                                <span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
                             </div>
                             <h3 class="mg-md text-center">
                                 Web design
@@ -102,7 +102,7 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="text-center">
-                                <span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" aria-label="Icône stratégie"></span>
+                                <span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
                             </div>
                             <h3 class="mg-md text-center">
                                 &nbsp;Stratégie
@@ -113,7 +113,7 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="text-center">
-                                <span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" aria-label="Icône illustrations"></span>
+                                <span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
                             </div>
                             <h3 class="mg-md text-center">
                                 Illustrations
@@ -139,9 +139,9 @@
                 <div class="container bloc-lg">
                     <div class="row tight-width-whitespace black-background">
                         <div class="col-sm-12">
-                            <p class="mg-md text-center tc-white">
-                                Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
-                            </p>
+                            <h3 class="mg-md text-center tc-white">
+                               Nous travaillons pour aider les entreprises sur lyon à attirer de nouveaux clients en réalisant des sites web et en augmentant leur référencement .<br>
+                            </h3>
                             <p class="text-center white">
                                 Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre
                                 site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link"
