Optimisation du javascript en enlevant les parties non utilisées et optimisation des aria-labels

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 La chouette agence.
                             </h1>
                             <div class="text-center">
-                                <a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" aria-label="bouton vers la page contact" id="cta-hero">Contact</a>
+                                <a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"  id="cta-hero">Contact</a>
                             </div>
                         </div>
                     </div>
@@ -208,11 +208,11 @@
             <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
                 <div class="container bloc-lg">
                     <div class="row">
-                        <p class="mg-md text-center tc-white">
-                            Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
-                        </p>
+                        <h5 class="mg-md text-center tc-white">
+                            Vous désirez travailler avec la chouette agence?<br>Contactez notre équipe !
+                        </h5>
                         <div class="col-sm-12 text-center">
-                            <a href="contact.html" aria-label="bouton vers la page contact" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+                            <a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
                         </div>
                     </div>
                 </div>
