--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
                                     </label>
                                     <textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
                                 </div>
-                                <button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit" aria-label="Envoyer">
+                                <button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
                                     Envoyer
                                 </button>
                             </form>
@@ -125,7 +125,7 @@
         </aside>
 
         <!-- ScrollToTop Button -->
-        <a class="bloc-button btn btn-d scrollToTop" aria-label="Aller en haut de la page" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+        <!--<a class="bloc-button btn btn-d scrollToTop" aria-label="Aller en haut de la page" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>-->
         <!-- ScrollToTop Button END-->
 
         <footer>
