--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     </div>
                     <div class="row tight-width-whitespace portfolio-row">
                         <div class="col-sm-6">
-                            <a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Image du projet: refonte d'un site web pour un journal local" class="img-responsive portfolio-thumb" /></a>
+                            <a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1_min.jpg" alt="Image du projet: refonte d'un site web pour un journal local" class="img-responsive portfolio-thumb" /></a>
                             <h5 class="mg-md text-center">
                                 Refonte d'un site web pour un journal local
                             </h5>
@@ -172,7 +172,7 @@
                             </p>
                         </div>
                         <div class="col-sm-6">
-                            <a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Image du projet: création d'un site web pour photographes" /></a>
+                            <a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2_min.jpg" class="img-responsive portfolio-thumb" alt="Image du projet: création d'un site web pour photographes" /></a>
                             <h5 class="mg-md text-center">
                                 Création d'un site web pour photographes
                             </h5>
@@ -183,7 +183,7 @@
                     </div>
                     <div class="row tight-width-whitespace portfolio-row">
                         <div class="col-sm-6">
-                            <a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Image du projet: création d'un site web pour voyageur" /></a>
+                            <a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3_min.jpg" class="img-responsive portfolio-thumb" alt="Image du projet: création d'un site web pour voyageur" /></a>
                             <h5 class="mg-md text-center">
                                 Création d'un site internet pour un voyageur
                             </h5>
@@ -192,7 +192,7 @@
                             </p>
                         </div>
                         <div class="col-sm-6">
-                            <a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Image du projet: création d'un site web pour agence de mariage" /></a>
+                            <a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4_min.jpg" class="img-responsive portfolio-thumb" alt="Image du projet: création d'un site web pour agence de mariage" /></a>
                             <h5 class="mg-md text-center">
                                 Conception d'un site pour une agence de mariage
                             </h5>
