--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
         </aside>
 
         <!-- ScrollToTop Button -->
-        <!--<a class="bloc-button btn btn-d scrollToTop" aria-label="Aller en haut de la page" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>-->
+        <a class="bloc-button btn btn-d scrollToTop" aria-label="Aller en haut de la page" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
         <!-- ScrollToTop Button END-->
 
         <footer>
